--- a/html/pagina_1.html
+++ b/html/pagina_1.html
@@ -13,7 +13,7 @@
     <fieldset id = "fieldset 1">
         <legend><h3>Dados Pessoais</h3></legend>
         <ul>
-            <img src = "./imagens/dove-1.jpg" border = "2" width = "15%">
+            <img src = "../imagens/foto-1.jfif" alt = "Imagem não Localizada!" border = "2" width = "15%">
             <br><br>
             <li><strong>Nome:</strong>&nbsp;Amanda Gomes Alvarenga</li>
             <br>
