--- a/html/pagina_2.html
+++ b/html/pagina_2.html
@@ -20,7 +20,7 @@
                 <br>
                 <li><strong>Duração:</strong>&nbsp;8 anos</li>
                 <br>
-                <li><strong>Link do Site da Instituição:</strong>&nbsp;</li>
+                <li><strong>Link do Site da Instituição:</strong>&nbsp;<a href = "https://www.escol.as/171939-maringa" target = "_blank">Página da Escola</a></li>
             </ul>
         </details>
 
@@ -35,7 +35,7 @@
                 <br>
                 <li><strong>Duração:</strong>&nbsp;3 anos</li>
                 <br>
-                <li><strong>Link do Site da Instituição:</strong>&nbsp;<a href = "https://www.facebook.com/pages/EEEFM-Sizenando-Pechincha/957927657591930?epa=SEARCH_BOX" target = "_blank"></a></li>
+                <li><strong>Link do Site da Instituição:</strong>&nbsp;<a href = "https://www.facebook.com/pages/EEEFM-Sizenando-Pechincha/957927657591930?epa=SEARCH_BOX" target = "_blank">Página da Escola</a></li>
             </ul>
         </details>
 
@@ -50,7 +50,7 @@
                 <br>
                 <li><strong>Duração:</strong>&nbsp;4 anos</li>
                 <br>
-                <li><strong>Link do Site da Instituição:</strong>&nbsp;<p> </li> <a href = "https://www.ucl.br/" target = "_blank"></a>
+                <li><strong>Link do Site da Instituição:</strong>&nbsp;<a href = "https://www.ucl.br/" target = "_blank">Site UCL</a></li>
             </ul>
         </details>
 
@@ -65,7 +65,7 @@
                 <br>
                 <li><strong>Duração:</strong>&nbsp;1 ano e 2 meses</li>
                 <br>
-                <li><strong>Link do Site da Instituição:</strong>&nbsp;<p> </li> <a href = "" target = "_blank"></a>
+                <li><strong>Link do Site da Instituição:</strong>&nbsp;<a href = "https://bitserra.com.br/" target = "_blank">Site da BIT Company</a></li> 
             </ul>
         </details>
 
@@ -87,10 +87,10 @@
                 <br>
                 <li><strong>Atividades Desempenhadas no Cargo:</strong>&nbsp;<br>
                 Elaboração e implementação de Croqui de acordo com requisitos e normas;<br>
-                
+                Instalação elétrica supervisionada.
                 </li>
                 <br>
-                <li><strong>Link do Site da Empresa:</strong>&nbsp;</li>
+                <li><strong>Link do Site da Empresa:</strong>&nbsp;<a href = "http://www.pinturasypiranga.com.br/" target = "_blank">Site Pinturas Ypiranga</a></li>
             </ul>
         </details>
 
@@ -113,25 +113,7 @@
                 Auxílio em projetos no AutoCAD.
                 </li>
                 <br>
-                <li><strong>Link do Site da Empresa:</strong>&nbsp;</li>
-            </ul>
-        </details>
-
-        <details id = "exp 3">
-            <summary>Estágio</summary>
-            <ul>
-                <li><strong>Empresa:</strong>&nbsp;Alertrack Soluções LTDA</li>
-                <br>
-                <li><strong>Cargo:</strong>&nbsp;Estagiária</li>
-                <br>
-                <li><strong>Ano de Entrada:</strong>&nbsp;2020</li>
-                <br>
-                <li><strong>Ano de Saída:</strong>&nbsp;2021</li>
-                <br>
-                <li><strong>Atividades Desempenhadas no Cargo:</strong>&nbsp;Auxílio no Setor de Desenvolvimento<br>
-                </li>
-                <br>
-                <li><strong>Link do Site da Empresa:</strong>&nbsp;</li>
+                <li><strong>Link do Site da Empresa:</strong>&nbsp;<a href = "Site Pinturas Ypiranga" target = "_blank">Site Angular Engenharia</a></li>
             </ul>
         </details>
     </fieldset>
