--- a/Trabalho_02/html/main.html
+++ b/Trabalho_02/html/main.html
@@ -6,154 +6,158 @@
     <link rel="stylesheet" type="text/css" href ="../css/style.css">
 
 </head>
-    <body>
-        <h1 style="color: black;">Periodic Table</h1>
+<body class="home_page">
 
-        <table class="table">
-            <tr>
-                <td id="H" class="tipo1">H</td>
-                <td colspan="16"></td>
-                <td id="He">He</td>
-            </tr>
-		<tr>
-			<td id="Li">Li</td>
-			<td id="Be">Be</td>
-			<td colspan="10"></td>
-			<td id="B">B</td>
-			<td id="C">C</td>
-			<td id="N">N</td>
-			<td id="O">O</td>
-			<td id="F">F</td>
-			<td id="Ne">Ne</td>
-		</tr>
-		<tr>
-			<td id="Na">Na</td>
-			<td id="Mg">Mg</td>
-			<td colspan="10"></td>
-			<td id="Al">Al</td>
-			<td id="Si">Si</td>
-			<td id="P">P</td>
-			<td id="S">S</td>
-			<td id="Cl">Cl</td>
-			<td id="Ar">Ar</td>
-		</tr>
-		<tr>
-			<td id="K">K</td>
-			<td id="Ca">Ca</td>
-			<td id="Sc">Sc</td>
-			<td id="Ti">Ti</td>
-			<td id="V">V</td>
-			<td id="Cr">Cr</td>
-			<td id="Mn">Mn</td>
-			<td id="Fe">Fe</td>
-			<td id="Co">Co</td>
-			<td id="Ni">Ni</td>
-			<td id="Cu">Cu</td>
-			<td id="Zn">Zn</td>
-			<td id="Ga">Ga</td>
-			<td id="Ge">Ge</td>
-			<td id="As">As</td>
-			<td id="Se">Se</td>
-			<td id="Br">Br</td>
-			<td id="Kr">Kr</td>
-		</tr>
-		<tr>
-			<td id="Rb">Rb</td>
-			<td id="Sr">Sr</td>
-			<td id="Y">Y</td>
-			<td id="Zr">Zr</td>
-			<td id="Nb">Nb</td>
-			<td id="Mo">Mo</td>
-			<td id="Tc">Tc</td>
-			<td id="Ru">Ru</td>
-			<td id="Rh">Rh</td>
-			<td id="Pd">Pd</td>
-			<td id="Ag">Ag</td>
-			<td id="Cd">Cd</td>
-			<td id="In">In</td>
-			<td id="Sn">Sn</td>
-			<td id="Sb">Sb</td>
-			<td id="Te">Te</td>
-			<td id="I">I</td>
-			<td id="Xe">Xe</td>
-		</tr>
-		<tr>
-			<td id="Cs">Cs</td>
-			<td id="Ba">Ba</td>
-			<td>57-71</td>
-			<td id="Hf">Hf</td>
-			<td id="Ta">Ta</td>
-			<td id="W">W</td>
-			<td id="Re">Re</td>
-			<td id="Os">Os</td>
-			<td id="Ir">Ir</td>
-			<td id="Pt">Pt</td>
-			<td id="Au">Au</td>
-			<td id="Hg">Hg</td>
-			<td id="TI">TI</td>
-			<td id="Pb">Pb</td>
-			<td id="Bi">Bi</td>
-			<td id="Po">Po</td>
-			<td id="At">At</td>
-			<td id="Rn">Rn</td>
-		</tr>
-		<tr>
-			<td id="Fr">Fr</td>
-			<td id="Ra">Ra</td>
-			<td>89-103</td>
-			<td id="Rf">Rf</td>
-			<td id="Db">Db</td>
-			<td id="Sg">Sg</td>
-			<td id="Bh">Bh</td>
-			<td id="Hs">Hs</td>
-			<td id="Mt">Mt</td>
-			<td id="Ds">Ds</td>
-			<td id="Rg">Rg</td>
-			<td id="cn">Cn</td>
-			<td id="Nh">Nh</td>
-			<td id="FI">FI</td>
-			<td id="Mc">Mc</td>
-			<td id="Lv">Lv</td>
-			<td id="Ts">Ts</td>
-			<td id="Og">Og</td>
-		</tr>
-		<tr style="line-height: 20px;">
-			<td colspan="3"></td>
-			<td id="La">La</td>
-			<td id="Ce">Ce</td>
-			<td id="Pr">Pr</td>
-			<td id="Nd">Nd</td>
-			<td id="Pm">Pm</td>
-			<td id="Sm">Sm</td>
-			<td id="Eu">Eu</td>
-			<td id="Gd">Gd</td>
-			<td id="Tb">Tb</td>
-			<td id="Dy">Dy</td>
-			<td id="Ho">Ho</td>
-			<td id="Er">Er</td>
-			<td id="Tm">Tm</td>
-			<td id="Yb">Yb</td>
-			<td id="Lu">Lu</td>
-		</tr>
-		<tr>
-			<td colspan="3"></td>
-			<td id="Ac">Ac</td>
-			<td id="Th">Th</td>
-			<td id="Pa">Pa</td>
-			<td id="U">U</td>
-			<td id="Np">Np</td>
-			<td id="Pu">Pu</td>
-			<td id="Am">Am</td>
-			<td id="Cm">Cm</td>
-			<td id="Bk">Bk</td>
-			<td id="Cf">Cf</td>
-			<td id="Es">Es</td>
-			<td id="Fm">Fm</td>
-			<td id="Md">Md</td>
-			<td id="No">No</td>
-			<td id="Lr">Lr</td>
-		</tr>
-
-	</table>
+        <div class="title">
+            <h1 style="color: black;">Periodic Table</h1>
+        </div>
+        <div class="table">
+            <table>
+                <tr>
+                    <td id="1" class="Ametais">H</td>
+                    <td colspan="16"></td>
+                    <td id="2" class="Gases_Nobres">He</td>
+                </tr>
+                <tr>
+                    <td id="3" class="Metais Alcalinos">Li</td>
+                    <td id="4" class="Metais Alcalinos_Terrosos">Be</td>
+                    <td colspan="10"></td>
+                    <td id="5" class="Semimetais Família_Boro">B</td>
+                    <td id="6" class="Ametais Família_Carbono">C</td>
+                    <td id="7" class="Ametais Pnictogênios">N</td>
+                    <td id="8" class="Ametais Calcogênios">O</td>
+                    <td id="9" class="Ametais Halogênios">F</td>
+                    <td id="10" class="Gases_Nobres">Ne</td>
+                </tr>
+                <tr>
+                    <td id="11" class="Metais Alcalinos">Na</td>
+                    <td id="12" class="Metais Alcalinos_Terrosos">Mg</td>
+                    <td colspan="10"></td>
+                    <td id="13" class="Metais Família_Boro">Al</td>
+                    <td id="14" class="Semimetais Família_Carbono">Si</td>
+                    <td id="15" class="Ametais Pnictogênios">P</td>
+                    <td id="16" class="Ametais Calcogênios">S</td>
+                    <td id="17" class="Ametais Halogênios">Cl</td>
+                    <td id="18" class="Gases_Nobres">Ar</td>
+                </tr>
+                <tr>
+                    <td id="19" class="Metais Alcalinos">K</td>
+                    <td id="20" class="Metais Alcalinos_Terrosos">Ca</td>
+                    <td id="21" class="Metais Transição">Sc</td>
+                    <td id="22" class="Metais Transição">Ti</td>
+                    <td id="23" class="Metais Transição">V</td>
+                    <td id="24" class="Metais Transição">Cr</td>
+                    <td id="25" class="Metais Transição">Mn</td>
+                    <td id="26" class="Metais Transição">Fe</td>
+                    <td id="27" class="Metais Transição">Co</td>
+                    <td id="28" class="Metais Transição">Ni</td>
+                    <td id="29" class="Metais Transição">Cu</td>
+                    <td id="30" class="Metais Transição">Zn</td>
+                    <td id="31" class="Metais Família_Boro">Ga</td>
+                    <td id="32" class="Semimetais Família_Carbono">Ge</td>
+                    <td id="33" class="Semimetais Pnictogênios">As</td>
+                    <td id="34" class="Ametais Calcogênios">Se</td>
+                    <td id="35" class="Ametais Halogênios">Br</td>
+                    <td id="36" class="Gases_Nobres">Kr</td>
+                </tr>
+                <tr>
+                    <td id="37" class="Metais Alcalinos">Rb</td>
+                    <td id="38" class="Metais Alcalinos_Terrosos">Sr</td>
+                    <td id="39" class="Metais Transição">Y</td>
+                    <td id="40" class="Metais Transição">Zr</td>
+                    <td id="41" class="Metais Transição">Nb</td>
+                    <td id="42" class="Metais Transição">Mo</td>
+                    <td id="43" class="Metais Transição">Tc</td>
+                    <td id="44" class="Metais Transição">Ru</td>
+                    <td id="45" class="Metais Transição">Rh</td>
+                    <td id="46" class="Metais Transição">Pd</td>
+                    <td id="47" class="Metais Transição">Ag</td>
+                    <td id="48" class="Metais Transição">Cd</td>
+                    <td id="49" class="Metais Família_Boro">In</td>
+                    <td id="50" class="Metais Família_Carbono">Sn</td>
+                    <td id="51" class="Semimetais Pnictogênios">Sb</td>
+                    <td id="52" class="Semimetais Calcogênios">Te</td>
+                    <td id="53" class="Ametais Halogênios">I</td>
+                    <td id="54" class="Gases_Nobres">Xe</td>
+                </tr>
+                <tr>
+                    <td id="55" class="Metais Alcalinos">Cs</td>
+                    <td id="56" class="Metais Alcalinos_Terrosos">Ba</td>
+                    <td>57-71</td>
+                    <td id="72" class="Metais Transição">Hf</td>
+                    <td id="73" class="Metais Transição">Ta</td>
+                    <td id="74" class="Metais Transição">W</td>
+                    <td id="75" class="Metais Transição">Re</td>
+                    <td id="76" class="Metais Transição">Os</td>
+                    <td id="77" class="Metais Transição">Ir</td>
+                    <td id="78" class="Metais Transição">Pt</td>
+                    <td id="79" class="Metais Transição">Au</td>
+                    <td id="80" class="Metais Transição">Hg</td>
+                    <td id="81" class="Metais Família_Boro">TI</td>
+                    <td id="82" class="Metais Família_Carbono">Pb</td>
+                    <td id="83" class="Metais Pnictogênios">Bi</td>
+                    <td id="84" class="Semimetais Calcogênios">Po</td>
+                    <td id="85" class="Ametais Halogênios">At</td>
+                    <td id="86" class="Gases_Nobres">Rn</td>
+                </tr>
+                <tr>
+                    <td id="87" class="Metais Alcalinos">Fr</td>
+                    <td id="88" class="Metais Alcalinos_Terrosos">Ra</td>
+                    <td>89-103</td>
+                    <td id="104" class="Metais Transição">Rf</td>
+                    <td id="105" class="Metais Transição">Db</td>
+                    <td id="106" class="Metais Transição">Sg</td>
+                    <td id="107" class="Metais Transição">Bh</td>
+                    <td id="108" class="Metais Transição">Hs</td>
+                    <td id="109" class="Metais Transição">Mt</td>
+                    <td id="110" class="Metais Transição">Ds</td>
+                    <td id="111" class="Metais Transição">Rg</td>
+                    <td id="112" class="Metais Transição">Cn</td>
+                    <td id="113" class="Metais Família_Boro">Nh</td>
+                    <td id="114" class="Metais Família_Carbono">FI</td>
+                    <td id="115" class="Metais Pnictogênios">Mc</td>
+                    <td id="116" class="Semimetais Calcogênios">Lv</td>
+                    <td id="117" class="Ametais Halogênios">Ts</td>
+                    <td id="118" class="Gases_Nobres">Og</td>
+                </tr>
+                <tr style="line-height: 20px;">
+                    <td colspan="3"></td>
+                    <td id="57" class="Metais Lantanídeos">La</td>
+                    <td id="58" class="Metais Lantanídeos">Ce</td>
+                    <td id="59" class="Metais Lantanídeos">Pr</td>
+                    <td id="60" class="Metais Lantanídeos">Nd</td>
+                    <td id="61" class="Metais Lantanídeos">Pm</td>
+                    <td id="62" class="Metais Lantanídeos">Sm</td>
+                    <td id="63" class="Metais Lantanídeos">Eu</td>
+                    <td id="64" class="Metais Lantanídeos">Gd</td>
+                    <td id="65" class="Metais Lantanídeos">Tb</td>
+                    <td id="66" class="Metais Lantanídeos">Dy</td>
+                    <td id="67" class="Metais Lantanídeos">Ho</td>
+                    <td id="68" class="Metais Lantanídeos">Er</td>
+                    <td id="69" class="Metais Lantanídeos">Tm</td>
+                    <td id="70" class="Metais Lantanídeos">Yb</td>
+                    <td id="71" class="Metais Lantanídeos">Lu</td>
+                </tr>
+                <tr>
+                    <td colspan="3"></td>
+                    <td id="89" class="Metais Actinídeos">Ac</td>
+                    <td id="90" class="Metais Actinídeos">Th</td>
+                    <td id="91" class="Metais Actinídeos">Pa</td>
+                    <td id="92" class="Metais Actinídeos">U</td>
+                    <td id="93" class="Metais Actinídeos">Np</td>
+                    <td id="94" class="Metais Actinídeos">Pu</td>
+                    <td id="95" class="Metais Actinídeos">Am</td>
+                    <td id="96" class="Metais Actinídeos">Cm</td>
+                    <td id="97" class="Metais Actinídeos">Bk</td>
+                    <td id="98" class="Metais Actinídeos">Cf</td>
+                    <td id="99" class="Metais Actinídeos">Es</td>
+                    <td id="100" class="Metais Actinídeos">Fm</td>
+                    <td id="101" class="Metais Actinídeos">Md</td>
+                    <td id="102" class="Metais Actinídeos">No</td>
+                    <td id="103" class="Metais Actinídeos">Lr</td>
+                </tr>
+            </table>
+        </div>  
+    
 </body>
 </html>
